k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  osu-server-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: osu-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  osu-server
    spec:
      containers:
      - name:  osu-server
        image:  europe-docker.pkg.dev/vash-esports/osu-server/osu-server
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  3000
          name:  osu-server
      restartPolicy: Always
